# marginfi-v2

./: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
.cargo/: config.toml
crates/test_transfer_hook/: Cargo.toml
crates/test_transfer_hook/src/: lib.rs
programs/marginfi/: Cargo.toml
programs/marginfi/src/: constants.rs  errors.rs  events.rs  lib.rs  macros.rs  prelude.rs  utils.rs
programs/marginfi/src/instructions/: mod.rs
programs/marginfi/src/instructions/marginfi_account/: borrow.rs  close.rs  close_balance.rs  deposit.rs  emissions.rs  flashloan.rs  initialize.rs  liquidate.rs  mod.rs  pulse_health.rs  repay.rs  sort_balances.rs  transfer_account.rs  withdraw.rs
programs/marginfi/src/instructions/marginfi_group/: add_pool.rs  add_pool_common.rs  add_pool_permissionless.rs  add_pool_with_seed.rs  close_bank.rs  collect_bank_fees.rs  config_bank_emode.rs  config_bank_oracle.rs  config_group_fee.rs  configure.rs  configure_bank.rs  configure_bank_lite.rs  edit_global_fee.rs  edit_stake_settings.rs  handle_bankruptcy.rs  init_global_fee_state.rs  init_staked_settings.rs  initialize.rs  migrate_pyth_push_oracle.rs  mod.rs  propagate_fee_state.rs  propagate_staked_settings.rs
programs/marginfi/src/state/: bank_cache.rs  emode.rs  fee_state.rs  health_cache.rs  marginfi_account.rs  marginfi_group.rs  mod.rs  price.rs  staked_settings.rs
programs/marginfi/tests/: tests.rs
programs/marginfi/tests/admin_actions/: account_transfer.rs  bankruptcy.rs  bankruptcy_auth.rs  close_balance.rs  create_marginfi_group.rs  interest_accrual.rs  mod.rs  setup_bank.rs  withdraw_fees.rs
programs/marginfi/tests/fixtures/bank/: bank_pyusd_230822.json  bank_sample_1.json  bank_sample_3.json
programs/marginfi/tests/fixtures/marginfi_account/: marginfi_account_sample_1.json  marginfi_account_sample_3.json
programs/marginfi/tests/misc/: bank_ignore_stale_isolated_banks.rs  bank_variable_oracle_staleness.rs  collateral_value_cap.rs  mod.rs  operational_state.rs  real_oracle_data.rs  regression.rs  risk_engine_flxible_oracle_checks.rs  token_extensions.rs
programs/marginfi/tests/user_actions/: borrow.rs  close_balance.rs  create_account.rs  deposit.rs  flash_loan.rs  liquidate.rs  mod.rs  repay.rs  withdraw.rs
scripts/: build-program.sh  deploy-devnet.sh  lint.sh  setup-devnet.sh  test-program.sh
tests/: 01_initGroup.spec.ts  02-configGroup.spec.ts  03_addBank.spec.ts  04_configureBank.spec.ts  05_setupEmissions.spec.ts  06_initUser.spec.ts  07_deposit.spec.ts  08_borrow.spec.ts  09_withdraw_repay.spec.ts  10_liquidate.spec.ts  11_health_pulse.spec.ts  12_transfer_account.spec.ts  13_closebank.spec.ts  marginfi.ts
tests/utils/: types.ts
