[workspace]
members = [
    "programs/*",
    "test-utils",
    "crates/test_transfer_hook"
]
resolver = "2"

[workspace.dependencies]
solana-cli-output = "=2.1.20"
solana-client = "=2.1.20"
solana-sdk = "=2.1.20"
solana-logger = "=2.1.20"
solana-program = "=2.1.20"
solana-program-test = "=2.1.20"
solana-account-decoder = "=2.1.20"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }

anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
anchor-client = { version = "0.31.1" }

fixtures = { path = "test-utils", package = "test-utilities" }
marginfi = { path = "programs/marginfi", package = "marginfi" }
transfer_hook = { path = "crates/test_transfer_hook", package = "test_transfer_hook" }

pyth-solana-receiver-sdk = "0.6.0"
switchboard-on-demand = "0.3.5"

borsh = "1.5.7"
bytemuck = "1.22.0"
bs58 = "0.5.1"
fixed = "=1.28.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
type-layout = "0.2.0"
static_assertions = "1.1.0"
test-case = "3.3.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
