[package]
name = "marginfi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
bytemuck = { version = "1.22.0", features = ["derive"] }
fixed = "=1.28.0"
type-layout = "0.2.0"
static_assertions = "1.1.0"
half = "=2.4.1" 

