[package]
name = "marginfi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
bytemuck = { version = "1.22.0", features = ["derive"] }
fixed = "=1.28.0"
type-layout = "0.2.0"
static_assertions = "1.1.0"
half = "=2.4.1" 
pyth-sdk-solana = "0.10.5"
pyth-solana-receiver-sdk = "0.6.1"
switchboard-on-demand = "0.3.5"
enum_dispatch = "0.3.13"
fixed-macro = "1.2.0"
anchor-spl = "0.31.1"
cfg-if = "1.0.0"
anyhow = "1.0.98"
pretty_assertions = "1.2.1"