[package]
name = "marginfi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["mainnet-beta"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-bpf = ["test", "debug"]
test = []
client = []
devnet = []
mainnet-beta = []
debug = []
staging = []

[dependencies]
anchor-lang = "0.31.1"
bytemuck = { version = "1.22.0", features = ["derive"] }
fixed = "=1.28.0"
type-layout = "0.2.0"
static_assertions = "1.1.0"
half = "=2.4.1" 
pyth-solana-receiver-sdk = "0.6.0"
switchboard-on-demand = "0.3.5"
enum_dispatch = "0.3.13"
fixed-macro = "1.2.0"
anchor-spl = "0.31.1"
cfg-if = "1.0.0"
anyhow = "1.0.98"
pretty_assertions = "1.2.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
solana-account-decoder = { workspace = true }
solana-cli-output = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
fixtures = { workspace = true, package = "test-utilities" }
test-case = { workspace = true }
base64 = "0.21.0"
serde_json = "1.0.115"